--- a/semana1/dia4/formulario.html
+++ b/semana1/dia4/formulario.html
@@ -11,21 +11,54 @@
       <form>
         <div>
           <label for="input-nombre">Nombre</label>
-          <input type="file" id="input-nombre" name=""/>
+          <input type="file" id="input-nombre" name="" />
         </div>
         <div>
-            <div>   
-                <h4>Género</h4>
-            </div>
-            <label for="">Femenino</label>
-            <input type="radio" name="genero" id="femenino" value="femenino">
+          <div>
+            <h4>Género</h4>
+          </div>
+          <label for="">Femenino</label>
+          <input type="radio" name="genero" id="femenino" value="femenino" />
         </div>
-<div>
-    <div>
-        <label for="Género">Masculino</label>
-        <input type="radio" name="genero" id="masculino" value="masculino">
-    </div>
-</div>
+        <div>
+          <div>
+            <label for="Género">Masculino</label>
+            <input type="radio" name="genero" id="masculino"  value="masculino" />
+          </div>
+          <div>
+            <h4>Deportes Favoritos</h4>
+          </div>
+          <div>
+            <label for="tenis">Tenis</label>
+            <input type="checkbox" name="tenis" id="tenis" value="tenis" />
+            <label for="baloncesto">Baloncesto</label>
+            <input type="checkbox" name="baloncesto" id="baloncesto" value="balncesto"/>
+            <label for="futbol">Futbol</label>
+            <input type="checkbox" name="futbol" id="futbol" value="futbol" />
+          </div>
+
+        <div>
+            <label for="coches">Marcas de coches</label>
+            <select name="coches" id="coches" >
+                <option value="volvo">Volvo</option>
+                <option value="subaru">Subaro</option>
+                <option value="fiat">Volvo</option>
+                <option value="lamborgini">Lamborgini</option>
+            </select>
+            </div>
+                <label for="lenguajes">Lenguajes de Programacón</label>
+                <select name="lenguaje" id="lenguaje" size="3">
+                    <option value="javascript">JS</option>
+                    <option value="typescript">Typescript</option>
+                    <option value="c++">C++</option>
+                    <option value="java"></option>Java</option>
+                    <option value="c#">C#</option>
+                    <option value="kotlin">Kotlin</option>
+                    <option value="c++">C++</option>
+                    <option value="swift">Swift</option>
+                 </select>
+
+        </div>
       </form>
     </main>
   </body>
